[package]
name = "lpc55s6x-usbd"
version = "0.0.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "`usb-device` implementation for NXP LPC55S6x microcontrollers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nickray/lpc55s6x-usbd"
readme = "README.md"
keywords = ["no-std", "embedded", "usb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcell = "0.1.0"
cortex-m = "0.6.0"
lpc55s6x-hal = { version = "0.0", features = ["rt"] }
usb-device = "0.2.0"

[features]
