[package]
name = "lpc55s6x-usbd"
version = "0.0.1"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "`usb-device` implementation for NXP LPC55S6x microcontrollers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nickray/lpc55s6x-usbd"
readme = "README.md"

[dependencies]

[features]
